# turn-events

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  flake.nix  license.md  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 7w3sbb2y8nhjb3g1ac650sr7jg9sb8ab-source  gjha8k5nv3vc49759hkgjh21pmfi786g-source  r2z5rzhyi32na1hxfvqdcc14w64l0y9s-source
Turnauswertung/: .classpath  .project  Turnauswertung.eml  Turnauswertung.userlibraries
Turnauswertung-py3/: manage.py  requirements.txt
Turnauswertung-py3/Turnauswertung/: settings.py  urls.py  wsgi.py
Turnauswertung-py3/athletes/: admin.py  models.py  urls.py  views.py
Turnauswertung-py3/auswertung/: settings.py  wsgi.py
Turnauswertung-py3/clubs/: admin.py  models.py  urls.py  views.py
Turnauswertung-py3/common/: admin.py  models.py  urls.py  views.py
Turnauswertung-py3/fixtures/: disciplines.json  full_tournament.json
Turnauswertung-py3/gymnastics/: urls.py
Turnauswertung-py3/squads/: admin.py  models.py  urls.py  views.py
Turnauswertung-py3/streams/: admin.py  models.py  urls.py  views.py
Turnauswertung-py3/teams/: admin.py  models.py  urls.py  views.py
Turnauswertung-py3/templatetags/: custom_template_tags.py
Turnauswertung-py3/tournaments/: admin.py  models.py  urls.py  views.py
Turnauswertung-py3/turnapp/: urls.py
Turnauswertung-py3/utils/: admin.py  dict_operations.py  pdf.py  txt.py
Turnauswertung/json/: initial_model_settings.json
Turnauswertung/src/: Main.java  NA_Main.java  ResetSettings.java  (+2 more)
(+293 files in other folders)
